--- a/part-3/practice/template.html
+++ b/part-3/practice/template.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[ここにあなたのGitHubユーザー名を入力]</title>
+    <title>Kanae-Chofu</title>
   </head>
   <body>
-    <h1>[ここにあなたのGitHubユーザー名を入力]'s page</h1>
+    <h1 style="color: white; background-color: red; font-size: 48px;">
+      Kanae-Chofu's page</h1>
   </body>
 </html>
